--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
   <h2 class="h2_title">
     次標題
   </h2>
-  <h3>小標題</h3> </div>
+  <h2 class="h2_title">
+    次標題
+  </h2>
+  <h4>小標題</h4> </div>
   
 </body>
 </html>
