--- a/contactus.html
+++ b/contactus.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +8,19 @@
     <title>Document</title>
     <link rel="stylesheet" href="./style_guildline.css">
 </head>
+
 <body>
-    
+    <!-- B HEADER -->
+    <header>
+        <nav>
+            <ul>
+                <li>首頁</li>
+                <li>關於我們</li>
+                <li>聯絡我們</li>
+            
+            </ul>
+        </nav>
+    </header>
 </body>
+
 </html>
