--- a/index.html
+++ b/index.html
@@ -1,24 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>首頁</title>
-    <link rel="stylesheet" href="./style_guildline.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/style.css">
+  <title>Document</title>
 </head>
-<body class="black_font">
- <div class="wrapper">
- <h1 class="h1_title primary_font">
-    大標題
-  </h1> 
-  <h2 class="h2_title">
-    次標題
-  </h2>
-  <h2 class="h2_title">
-    次標題
-  </h2>
-
+<body>
+  <div>test</div>
   
 </body>
 </html>
