--- a/index.html
+++ b/index.html
@@ -10,10 +10,17 @@
 </head>
 
 <body>
-  <div class="wrapper">
-    <div>test</div>
-    <div class="btn"> click</div>
+  <div class="container">
+    <section class="main">
+      <div class="wrapper">
+        <h1>test</h1>
+        <h2>h2 <span>title</span></h2>
+        <div class="btn"> click</div>
+      </div>
+    </section>
   </div>
+
+
 </body>
 
 </html>
