--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
       <div class="wrapper">
         <h1>test</h1>
         <h2>h2 <span>title</span></h2>
-        <div class="btn"> click</div>
+        <div class="btn btn--error"> click</div>
+        <div class="btn btn--warming"> click</div>
       </div>
     </section>
   </div>
