--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <h1>test</h1>
         <h2>h2 <span>title</span></h2>
         <div class="btn btn--error"> click</div>
-        <div class="btn btn--warming"> click</div>
+        <div class="btn btn--warning"> click</div>
       </div>
     </section>
   </div>
