--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/mixin.css">
   <title>Document</title>
 </head>
 
@@ -19,6 +20,20 @@
         <div class="btn btn--warning"> click</div>
       </div>
     </section>
+    <section class="main">
+      <div class="wrapper">
+        <div class="btn_sumbit">
+          送出
+        </div>
+        <div class="btn_cancel">
+          取消
+        </div>
+      </div>
+      
+
+    </section>
+
+
   </div>
 
 
