--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
    <div class="wrapper">
-      @@include('layout/nav.html')
+    @@include('layout/nav.html', {
+      "title" : "logo"
+    })
    </div>
      @@include('layout/footer.html') 
 </body>
