--- a/src/about.html
+++ b/src/about.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     @@include('layout/head.html', {
-       "title" : "首頁"
+       "title" : "關於我們"
     })
 </head>
 <body>
@@ -10,7 +10,7 @@
     @@include('layout/nav.html', {
       "title" : "logo"
     })
-    <main class="index"></main>
+    <main class="about"></main>
    </div>
      @@include('layout/footer.html') 
 </body>
