--- a/src/about.html
+++ b/src/about.html
@@ -8,7 +8,8 @@
 <body>
    <div class="wrapper">
     @@include('layout/nav.html', {
-      "title" : "logo"
+      "title" : "logo",
+      "active2" : "active"
     })
     <main class="about"></main>
    </div>
