--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,8 @@
 <body>
    <div class="wrapper">
     @@include('layout/nav.html', {
-      "title" : "logo"
+      "title" : "logo",
+      "active1" : "active"
     })
     <main class="index"></main>
    </div>
