--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     })
 </head>
 <body>
-   <div class="wrapper">
+   <div class="wrapper index">
     @@include('layout/nav.html', {
       "title" : "logo",
       "active1" : "active"
