--- a/index.html
+++ b/index.html
@@ -1,13 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        .box {
+            width: 100px;
+            height: 100px;
+            background-color: rgb(72, 255, 0);
+        }
+    </style>
     <script src="./dist/main.js" async></script>
 </head>
+
 <body>
-    
+    <div class="box"></div>
+
+
 </body>
+
 </html>
