--- a/index.html
+++ b/index.html
@@ -6,20 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-        .box {
-            width: 100px;
-            height: 100px;
-            background-color: rgb(72, 255, 0);
-        }
-    </style>
-    <script src="./dist/main.js" async></script>
+    <script src="./dist/bundle.js" async></script>
 </head>
 
 <body>
+    <h1>首頁</h1>
     <div class="box"></div>
 
-
+  
 </body>
 
 </html>
