--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 </head>
 
 <body>
+    <header>
+        <div class="logo">logo</div>
+    </header>
     <h1>首頁</h1>
     <div class="box"></div>
 
